--- a/views/layout.jade
+++ b/views/layout.jade
@@ -19,7 +19,7 @@ html
 
 
         .navbar.navbar-fixed-top
-            .navbar-inner
+            .navbar-inner.container
                 a.brand(href='#', style='margin-top: 0px !important; margin-bottom: 0px !important')
                     img(src='/img/logo/dlogo1.1.png')
                 ul.nav
@@ -33,12 +33,7 @@ html
                         a.smoothScroll(href='#about') About
                     li
                         a.smoothScroll(href='#contact') Contact
-
         .container
-
-
-
-
             block content
 
 
