Layout and graphics

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,70 +2,137 @@ extends layout
 
 block content
 
+    .row-fluid#whatwedo
+        ul.thumbnails
+            li.span4
+                .thumbnail
+                    img(src='/img/elements/dovetail_1.jpg', alt='')
+                    .caption
+                        h3 We are
+
+                        p specialists in managing digital education projects.
+
+                        p We work with organisations in Australia and NZ to deliver their small or medium-sized IT projects reliably and cost effectively.
+
+            li.span4
+                .thumbnail
+                    img(src='/img/elements/dovetail_2.jpg', alt='')
+                    .caption
+                        h3 We help
+
+                        p an organisation analyse its business needs and then independently propose various digital solutions.
+
+                        p We subsequently engage the applicable technical partners, build a dedicated project team and manage the project.
+
+            li.span4
+                .thumbnail
+                    img(src='/img/elements/dovetail_3.jpg', alt='')
+                    .caption
+                        h3 We can 
+
+                        p help you develop web services and applications for PC & Notebooks, Smartphones, Tablets and Web TV.
+
+                        p Or we can help you integrate new services developed by other IT vendors into your existing technical landscape.
+
+
+
+
+
     .row
         .span12
-            #whatwedo
 
-                h1 What we do
+            hr#technicalservices
 
-                p We are specialists in digital education. We work with organisations in Australia and NZ to deliver small or medium-sized IT projects reliably and cost effectively.
+            h2 Technical services
 
-                p We help an organisation analyse its business needs and then independently propose various digital solutions. We subsequently engage the applicable technical partners, build a dedicated project team and manage the project.
+            .media
+                a.pull-left(href="#")
+                    img.media-object(src="/img/elements/dovetail_4.jpg")
 
-                p We can help you develop web services and applications for Smartphones, PC & Notebooks, Tablets and Web TV. Or we can help you integrate new services developed by other IT vendors into your existing technical landscape.
+                .media-body
 
-            #methodology
-                h1 Methodology
 
-                p We work with organisations during any or all of the project life cycle phases and the critical aspects of our over-arching approach are summarised as follows;
+                    p We believe working with the education industry to successfully deliver IT projects requires a tailored approach which takes into account the industry's distinct characteristics.
 
-                ul
-                    li Focused on very high-quality analysis of commercial and technical requirements and clear written communication.
-                    li Committed to providing a transparent and independent assessment of the various possible technical solutions.
-                    li Willing to execute work following either an agile and iterative approach or work following formal structured approaches.
-                    li Able to provide strong and experienced project management which will manage all the associated vendors & internal customers.
-                    li Keen to work professionally and constructively with sponsors, partners and users by reporting to stakeholders clearly and frequently.
-                    li Aiming to provide strong technical governance to ensure the team produces high-quality outcomes reliably and affordably.
+                    p We seek to work with public and private sector organisations on small or medium-sized projects relating to the following areas.
 
-            #technicalservices
-                h1 Technical services
+                    p However we are happy to discuss work outside of these areas on a case-by-case basis.
 
-                p We believe working with the education industry to successfully deliver IT projects requires a tailored approach which takes into account the industry's distinct characteristics.
 
-                p We seek to work with public and private sector organisations on small or medium-sized projects relating to the following areas. However we are happy to discuss work outside of these areas on a case-by-case basis.
+                    ul
+                        li Education content and apps
+                        li Distance learning and tele-education services
+                        li Adaptive learning content
+                        li Educator training content
+                        li Content management systems
+                        li School and pupil administration
+                        li Timetable development
+                        li Results management services
+                        li Communications management
+                        li Cloud services and data warehousing
+                        li Networking
 
-                ul
-                    li Education content and apps
-                    li Distance learning and tele-education services
-                    li Adaptive learning content
-                    li Educator training content
-                    li Content management systems
-                    li School and pupil administration
-                    li Timetable development
-                    li Results management services
-                    li Communications management
-                    li Data warehousing
-                    li Networking
+            hr#methodology
 
-            #about
-                h1 About
+            h2 Methodology
 
-                p Dovetail Digital Healthcare and Education Pty. Ltd. is based in Sydney, Australia and was incorporated in September 2012.
+            .media
+                a.pull-left(href="#")
+                    img.media-object(src="/img/elements/dovetail_5.jpg")
 
-                p The principal is Dominic Hebert who has over 12 years of experience in the commercial development of IT and telecommunications services with particular emphasis on mobile or web services and software development.
+                .media-body
 
-            #contact
-                h1 Contact
+                    p We work with organisations during any or all of the project life cycle phases.
 
-                p Clients, please contact us for an obligation free initial consultation. If you're in Sydney, we'd be happy to meet in person.
+                    p The critical aspects of our over-arching approach is summarised as follows:
 
-                p Candidates, enquiries are welcome and please email your details to our recruitment drop box.
+                    ul
+                        li Focused on very high-quality analysis of commercial and technical requirements and clear written communication.
 
-                p Investors, please email our drop box with any enquiries or let us know when we can contact you to discuss your interest.
+                        li Committed to providing a transparent and independent assessment of the various possible technical solutions.
 
-                p Call: +61 (0) 457 564 773 | Skype: dovetaildhe
-                p Email: contact@dovetaildhe.com | recruitment@dovetaildhe.com | investors@dovetaildhe.com
-                p Meet: Level 3, 2 Lacey St, Sydney, Australia
+                        li Willing to execute work following either an agile and iterative approach or work following formal structured approaches.
+
+                        li Able to provide strong and experienced project management which will manage all the associated vendors & internal customers.
+
+                        li Keen to work professionally and constructively with sponsors, partners and users by reporting to stakeholders clearly and frequently.
+
+                        li Aiming to provide strong technical governance to ensure the team produces high-quality outcomes reliably and affordably.
+
+
+            hr#about
+
+            h2 About
+
+            .media
+                a.pull-left(href="#")
+                    img.media-object(src="/img/elements/dovetail_6.jpg")
+
+                .media-body
+
+                    p Dovetail Digital Healthcare and Education Pty. Ltd. is based in Sydney, Australia and was incorporated in September 2012.
+
+                    p The principal is Dominic Hebert who has over 12 years of experience in the commercial development of IT and telecommunications services with particular emphasis on mobile or web services and software development.
+
+            hr#contact
+
+            h2 Contact
+
+            .media
+                a.pull-left(href="#")
+                    img.media-object(src="/img/elements/dovetail_7.jpg")
+
+                .media-body
+
+                    p Clients, please contact us for an obligation free initial consultation. If you're in Sydney, we'd be happy to meet in person.
+
+                    p Candidates, enquiries are welcome and please email your details to our recruitment drop box.
+
+                    p Investors, please email our drop box with any enquiries or let us know when we can contact you to discuss your interest.
+
+                    p Call: +61 (0) 457 564 773 | Skype: dovetaildhe
+                    p Email: contact@dovetaildhe.com | recruitment@dovetaildhe.com | investors@dovetaildhe.com
+                    p Meet: Level 3, 2 Lacey St, Sydney, Australia
 
 
 
