--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,9 +6,14 @@ html
         link(rel='stylesheet', href='/css/font-awesome.min.css')
         link(rel='stylesheet', href='/css/font-awesome-ie7.min.css')
         link(rel='stylesheet', href='/css/bootstrap-responsive.css')
+
+        script(type='text/javascript',  src='js/lib/require.js')
+        script(type='text/javascript',  src='js/global/requireConfig.js')
+
         script(type='text/javascript', src='/js/lib/jquery-1.8.3.min.js')
         script(type='text/javascript', src='/js/lib/bootstrap.min.js')
         script(type='text/javascript', src='/js/lib/smoothscroll.js')
+
 
         style
             body {
