New image and scrollspy

--- a/views/index.jade
+++ b/views/index.jade
@@ -67,11 +67,9 @@ block content
     .row
         .span12
 
-            hr#technicalservices
+            div#technicalservices(style='border-top: 1px solid #cccccc; margin-bottom: 50px;')
 
-
-
-            .row
+            .row(style='margin-bottom: 50px;')
                 .span4
                     img.media-object(src="/img/elements/dovetail_4_400.jpg")
 
@@ -102,13 +100,13 @@ block content
     .row
         .span12
 
-            hr#methodology
+            div#methodology(style='border-top: 1px solid #cccccc; margin-bottom: 50px;')
 
-            .row
-                .span6
-                    img(src="/img/elements/dovetail_5_700.jpg")
+            .row(style='margin-bottom: 50px;')
+                .span4
+                    img(src="/img/elements/dovetail_8_400.jpg")
 
-                .span6
+                .span8
                     h2.media-heading Methodology
 
                     p We work with organisations during any or all of the project life cycle phases.
@@ -132,9 +130,9 @@ block content
     .row
         .span12
 
-            hr#about
+            div#about(style='border-top: 1px solid #cccccc; margin-bottom: 50px;')
 
-            .row
+            .row(style='margin-bottom: 50px;')
                 .span4
                     img.media-object.thumbnail(src="/img/elements/dovetail_6_400.jpg")
 
@@ -149,7 +147,7 @@ block content
     .row
         .span12
 
-            hr#contact
+            div#contact(style='border-top: 1px solid #cccccc; margin-bottom: 50px;')
 
             .span2
 
